version1/backend/infra/k8s-dev/ingress-srv.yaml
# apiVersion: extensions/v1beta1
# kind: Ingress
# metadata:
#   name: ingress-service
#   annotations:
#     kubernetes.io/ingress.class: nginx
#     nginx.ingress.kubernetes.io/use-regex: "true"

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: butik.dev
      http:
        paths:
          - path: /api/v1/products/
            pathType: Prefix
            backend:
              service:
                name: products-srv
                port:
                  number: 5000
          - path: /api/v1/authentication/
            pathType: Prefix
            backend:
              service:
                name: auth-srv
                port:
                  number: 5000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client-srv
                port:
                  number: 5000
